or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
License for more details.
.
You should have received a copy of the GNU Lesser General Public License
along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
MA 02110-1301, USA.

2017-03-01 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 3.0.0 released

2015-11-20 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.7.2 released

2015-11-13 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.7.1 released

2015-06-26 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.7.0 released

2012-10-05 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.6.0 released

2012-10-02 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.5.2 released

2012-03-11 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.5.1 released

2012-01-05 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.5.0 released

2011-06-14 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.4.0 released

2011-04-05 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.3.1 released

2011-03-04 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.3.0 released

2010-12-18 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.2.1 released

2010-12-02 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.2.0 released

2010-12-01 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.1.4 released

2010-06-25 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.1.1 released

2010-06-07 mpir-devel <http://groups.google.com/group/mpir-devel>

    * MPIR version 2.1.0 released
