@@ -122,26 +122,6 @@ along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
 /* __GMP_DECLSPEC supports Windows DLL versions of libmpir, and is empty in
    all other circumstances.
 
-   When compiling objects for libmpir, __GMP_DECLSPEC is an export directive,
-   or when compiling for an application it's an import directive.  The two
-   cases are differentiated by __GMP_WITHIN_GMP defined by the GMP Makefiles
-   (and not defined from an application).
-
-   __GMP_DECLSPEC_XX is similarly used for libmpirxx.  __GMP_WITHIN_GMPXX
-   indicates when building libmpirxx, and in that case libmpirxx functions are
-   exports, but libmpir functions which might get called are imports.
-
-   libmp.la uses __GMP_DECLSPEC, just as if it were libmpir.la.  libmpir and
-   libmp don't call each other, so there's no conflict or confusion.
-
-   Libtool DLL_EXPORT define is not used.
-
-   There's no attempt to support GMP built both static and DLL.  Doing so
-   would mean applications would have to tell us which of the two is going
-   to be used when linking, and that seems very tedious and error prone if
-   using GMP by hand, and equally tedious from a package since autoconf and
-   automake don't give much help.
-
    __GMP_DECLSPEC is required on all documented global functions and
    variables, the various internals in gmp-impl.h etc can be left unadorned.
    But internals used by the test programs or speed measuring programs
@@ -160,40 +140,29 @@ along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
    make use of that.  Probably more trouble than it's worth.  */
 
 #if defined (__GNUC__)
-#define __GMP_DECLSPEC_EXPORT  __declspec(__dllexport__)
 #define __GMP_DECLSPEC_IMPORT  __declspec(__dllimport__)
 #endif
 #if defined (_MSC_VER) || defined (__BORLANDC__)
-#define __GMP_DECLSPEC_EXPORT  __declspec(dllexport)
 #define __GMP_DECLSPEC_IMPORT  __declspec(dllimport)
 #endif
 #ifdef __WATCOMC__
-#define __GMP_DECLSPEC_EXPORT  __export
 #define __GMP_DECLSPEC_IMPORT  __import
 #endif
 #ifdef __IBMC__
-#define __GMP_DECLSPEC_EXPORT  _Export
 #define __GMP_DECLSPEC_IMPORT  _Import
 #endif
 
 #if defined( _MSC_VER )
 #  if defined( MSC_BUILD_DLL )
 #    define __GMP_LIBGMP_DLL   1
-#    define __GMP_WITHIN_GMP   1
-#    define __GMP_WITHIN_GMPXX 1
 #  elif defined( MSC_USE_DLL )
 #    define __GMP_LIBGMP_DLL   1
 #  endif
 #endif
 
 #if __GMP_LIBGMP_DLL
-#if __GMP_WITHIN_GMP
-/* compiling to go into a DLL libmpir */
-#define __GMP_DECLSPEC  __GMP_DECLSPEC_EXPORT
-#else
 /* compiling to go into an application which will link to a DLL libmpir */
 #define __GMP_DECLSPEC  __GMP_DECLSPEC_IMPORT
-#endif
 #else
 /* all other cases */
 #define __GMP_DECLSPEC
@@ -311,13 +280,8 @@ typedef __mpq_struct *mpq_ptr;
 
 
 #if __GMP_LIBGMP_DLL
-#if __GMP_WITHIN_GMPXX
-/* compiling to go into a DLL libmpirxx */
-#define __GMP_DECLSPEC_XX  __GMP_DECLSPEC_EXPORT
-#else
 /* compiling to go into a application which will link to a DLL libmpirxx */
 #define __GMP_DECLSPEC_XX  __GMP_DECLSPEC_IMPORT
-#endif
 #else
 /* all other cases */
 #define __GMP_DECLSPEC_XX
