@@ -21,7 +21,7 @@
 # MA 02110-1301, USA.
 
 
-AM_CPPFLAGS = -D__GMP_WITHIN_GMP -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir)
 
 noinst_LTLIBRARIES = libmpf.la
 libmpf_la_SOURCES = abs.c add.c add_ui.c ceilfloor.c clear.c clears.c cmp.c cmp_d.c cmp_si.c cmp_ui.c div.c div_2exp.c div_ui.c dump.c eq.c fits_s.h fits_si.c fits_sint.c fits_slong.c fits_sshort.c fits_u.h fits_ui.c fits_uint.c fits_ulong.c fits_ushort.c get_d.c get_d_2exp.c get_dfl_prec.c get_prc.c get_si.c get_str.c get_ui.c init.c init2.c inits.c inp_str.c int_p.c iset.c iset_d.c iset_si.c iset_str.c iset_ui.c mul.c mul_2exp.c mul_ui.c neg.c out_str.c pow_ui.c random2.c reldiff.c rrandomb.c set.c set_d.c set_dfl_prec.c set_prc.c set_prc_raw.c set_q.c set_si.c set_str.c set_ui.c set_z.c size.c sqrt.c sqrt_ui.c sub.c sub_ui.c swap.c trunc.c ui_div.c ui_sub.c urandomb.c
