@@ -21,7 +21,7 @@
 # MA 02110-1301, USA.
 
 
-AM_CPPFLAGS = -D__GMP_WITHIN_GMP -I$(top_srcdir)
+AM_CPPFLAGS = -I$(top_srcdir)
 
 noinst_LTLIBRARIES = libmpz.la
 libmpz_la_SOURCES = 2fac_ui.c abs.c add.c add_ui.c and.c aors.h aors_ui.h aorsmul.c aorsmul_i.c array_init.c bin_ui.c bin_uiui.c cdiv_q.c cdiv_q_ui.c cdiv_qr.c cdiv_qr_ui.c cdiv_r.c cdiv_r_ui.c cdiv_ui.c cfdiv_q_2exp.c cfdiv_r_2exp.c clear.c clears.c clrbit.c cmp.c cmp_d.c cmp_si.c cmp_ui.c cmpabs.c cmpabs_d.c cmpabs_ui.c com.c combit.c cong.c cong_2exp.c cong_ui.c dive_ui.c divegcd.c divexact.c divis.c divis_2exp.c divis_ui.c dump.c export.c fac_ui.c fdiv_q.c fdiv_q_ui.c fdiv_qr.c fdiv_qr_ui.c fdiv_r.c fdiv_r_ui.c fdiv_ui.c fib2_ui.c fib_ui.c fits_s.h fits_si.c fits_sint.c fits_slong.c fits_sshort.c fits_ui.c fits_uint.c fits_ulong.c fits_ushort.c gcd.c gcd_ui.c gcdext.c get_d.c get_d_2exp.c get_si.c get_str.c get_sx.c get_ui.c get_ux.c getlimbn.c hamdist.c import.c init.c init2.c inits.c inp_raw.c inp_str.c invert.c ior.c iset.c iset_d.c iset_si.c iset_str.c iset_sx.c iset_ui.c iset_ux.c jacobi.c kronsz.c kronuz.c kronzs.c kronzu.c lcm.c lcm_ui.c likely_prime_p.c limbs_finish.c limbs_modify.c limbs_read.c limbs_write.c lucnum2_ui.c lucnum_ui.c mfac_uiui.c miller_rabin.c millerrabin.c mod.c mul.c mul_2exp.c mul_i.h mul_si.c mul_ui.c n_pow_ui.c neg.c next_prime_candidate.c nextprime.c nthroot.c oddfac_1.c out_raw.c out_str.c perfpow.c perfsqr.c popcount.c pow_ui.c powm.c powm_ui.c pprime_p.c primorial_ui.c probable_prime_p.c prodlimbs.c realloc.c realloc2.c remove.c roinit_n.c root.c rootrem.c rrandomb.c scan0.c scan1.c set.c set_d.c set_f.c set_q.c set_si.c set_str.c set_sx.c set_ui.c set_ux.c setbit.c size.c sizeinbase.c sqrt.c sqrtrem.c sub.c sub_ui.c swap.c tdiv_q.c tdiv_q_2exp.c tdiv_q_ui.c tdiv_qr.c tdiv_qr_ui.c tdiv_r.c tdiv_r_2exp.c tdiv_r_ui.c tdiv_ui.c trial_division.c tstbit.c ui_pow_ui.c ui_sub.c urandomb.c urandomm.c xor.c
