@@ -20,6 +20,9 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 MA 02110-1301, USA.
 
+2017-11-17 David Allsopp <David.Allsopp@cl.cam.ac.uk>
+    * Eliminate __GMP_WITHIN_GMP and __GMP_WITHIN_GMPXX.
+
 2017-03-01 mpir-devel <http://groups.google.com/group/mpir-devel>
 
     * MPIR version 3.0.0 released
